# guck4

./: .gitignore  README.md  pyproject.toml  requirements.txt
guck4/: __init__.py  __main__.py  g3db.py  g4db.py  guck4.py  models.py  mpcam.py  mplogging.py  peopledetection.py  utils.py  webflask.py
guck4/data/: guck4.config
guck4/templates/: base.html  configedit.html  detections.html  guckphoto.html  index.html  livecam.html  login.html  photos.html  pkill.html  restart.html  start.html  status.html  stop.html
