[project]
name = "guck4"
version = "4.2.3"
description = "Version 4 of the world-famous GUCK"
authors = [
    {name = "dermatty",email = "stephan@untergrabner.at"}
]
license = "GPL v3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fridagram>=0.1.13",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "setproctitle>=1.3.3",
    "pysensors>=0.0.4",
    "shapely>=2.0.7",
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
    "redis>=5.0.1",
    "html2text>=2024.2",
    "flask-sse>=1.0.0",
    "flask-session>=0.8.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.1",
    "toml>=0.10.2",
    "psutil>=6.0.0",
    "paramiko>=3.3.1",
    "pip>=25.0",
    "numpy>=2.0.0",
    "pytoml>=0.1.21"
]

[tool.poetry.dependencies]
fridagram = { source = "btec" }
python = ">=3.11,<4.0"


[[tool.poetry.source]]
name = "btec"
url = "http://btec.iv.at:8123"
priority = "supplemental"

[tool.poetry.scripts]
guck4 = "guck4.guck4:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
